--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page4.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page4.xhtml
@@ -5,105 +5,110 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100 TextAlCenter">
-        <h1>
-            Tolerating losses in some years is part of investing.
-            Based on your initial investment of #{dataDisplayConverter.displayAsMoney(ceb.investment)},
-            what is the largest loss you would comfortably tolerate during a 1-year-time-frame?
-        </h1>
+    <div class="Container100">
+            <div class="ContainerIndent">
+                <div class="TextAlCenter">
+                    <h1>
+                        Tolerating losses in some years is part of investing.
+                        Based on your initial investment of #{dataDisplayConverter.displayAsMoney(ceb.investment)},
+                        what is the largest loss you would comfortably tolerate during a 1-year-time-frame?
+                    </h1>
 
-        <!--ltamDownArrow-->
-        <p:panel id="page4table" styleClass="Container100" style="border: 0px">
-            <div class="EmptyBox20"/>
+                    <!--ltamDownArrow-->
+                    <p:panel id="page4table" styleClass="Container100" style="border: 0px">
+                        <div class="EmptyBox20"/>
 
-            <p:selectOneRadio id="customRadio" value="#{ceb.ans4}" layout="custom"
-                    required="true" requiredMessage="Please choose one of these choices"
-                    update=":ceForm:page4table">
-                <f:selectItem itemLabel="(0%)" itemValue="1"/>
-                <f:selectItem itemLabel="(-5% )" itemValue="2"/>
-                <f:selectItem itemLabel="(-10% )" itemValue="3"/>
-                <f:selectItem itemLabel="( -15% ) " itemValue="4"/>
-                <f:selectItem itemLabel="( -25% )" itemValue="5"/>
-            </p:selectOneRadio>
+                        <p:selectOneRadio id="customRadio" value="#{ceb.ans4}" layout="custom"
+                                          required="true" requiredMessage="Please choose one of these choices"
+                                          update=":ceForm:page4table">
+                            <f:selectItem itemLabel="(0%)" itemValue="1"/>
+                            <f:selectItem itemLabel="(-5% )" itemValue="2"/>
+                            <f:selectItem itemLabel="(-10% )" itemValue="3"/>
+                            <f:selectItem itemLabel="( -15% ) " itemValue="4"/>
+                            <f:selectItem itemLabel="( -25% )" itemValue="5"/>
+                        </p:selectOneRadio>
 
-            <h:panelGrid styleClass="page4table" columns="4" cellpadding="0">
-                <p:radioButton id="opt1" for="customRadio" itemIndex="0"/>
-                <h:outputLabel for="opt1" value="Less than #{dataDisplayConverter.displayAsMoney(ceb.investment * 0.049)}"/>
-                <p:commandLink id="img1" update=":ceForm:page4table"
-                               ajax="true" 
-                               actionListener="#{ceb.image(1)}"
-                               onfocus="ceb.hoverImage(1)">
-                    <p:graphicImage name="images/arrowtickS.svg" library="ltam" styleClass="pg5_h1"  rendered="#{ceb.isImageSelected(1)}"/>
-                    <p:graphicImage name="images/arrowtick.svg" library="ltam" styleClass="pg5_h1" rendered="#{! ceb.isImageSelected(1)}">
-                    </p:graphicImage>
-                </p:commandLink>
-                <p:outputLabel for="opt1" value="(less than 5%)"/>
+                        <h:panelGrid styleClass="page4table" columns="4" cellpadding="0">
+                            <p:radioButton id="opt1" for="customRadio" itemIndex="0"/>
+                            <h:outputLabel for="opt1" value="Less than #{dataDisplayConverter.displayAsMoney(ceb.investment * 0.049)}"/>
+                            <p:commandLink id="img1" update=":ceForm:page4table"
+                                           ajax="true"
+                                           actionListener="#{ceb.image(1)}"
+                                           onfocus="ceb.hoverImage(1)">
+                                <p:graphicImage name="images/arrowtickS.svg" library="ltam" styleClass="pg5_h1" rendered="#{ceb.isImageSelected(1)}"/>
+                                <p:graphicImage name="images/arrowtick.svg" library="ltam" styleClass="pg5_h1" rendered="#{! ceb.isImageSelected(1)}">
+                                </p:graphicImage>
+                            </p:commandLink>
+                            <p:outputLabel for="opt1" value="(less than 5%)"/>
 
-                <p:radioButton id="opt2" for="customRadio" itemIndex="1"/>
-                <h:outputLabel for="opt2" value="-#{dataDisplayConverter.displayAsMoney(ceb.investment * 0.05)}"/>
-                <p:commandLink id="img2" update=":ceForm:page4table"
-                               ajax="true" immediate="true"
-                               actionListener="#{ceb.image(2)}"
-                               onfocus="ceb.hoverImage(2)">
-                    <p:graphicImage name="images/arrowtickS.svg" library="ltam" styleClass="pg5_h1" rendered="#{ceb.isImageSelected(2)}"/>
-                    <p:graphicImage name="images/arrowtick.svg" library="ltam" styleClass="pg5_h1" rendered="#{! ceb.isImageSelected(2)}">
-                    </p:graphicImage>
-                </p:commandLink>
-                <p:outputLabel for="opt2" value="( - 5%)"/>
+                            <p:radioButton id="opt2" for="customRadio" itemIndex="1"/>
+                            <h:outputLabel for="opt2" value="-#{dataDisplayConverter.displayAsMoney(ceb.investment * 0.05)}"/>
+                            <p:commandLink id="img2" update=":ceForm:page4table"
+                                           ajax="true" immediate="true"
+                                           actionListener="#{ceb.image(2)}"
+                                           onfocus="ceb.hoverImage(2)">
+                                <p:graphicImage name="images/arrowtickS.svg" library="ltam" styleClass="pg5_h1" rendered="#{ceb.isImageSelected(2)}"/>
+                                <p:graphicImage name="images/arrowtick.svg" library="ltam" styleClass="pg5_h1" rendered="#{! ceb.isImageSelected(2)}">
+                                </p:graphicImage>
+                            </p:commandLink>
+                            <p:outputLabel for="opt2" value="( - 5%)"/>
 
-                <p:radioButton id="opt3" for="customRadio" itemIndex="2"/>
-                <h:outputLabel for="opt3" value="-#{dataDisplayConverter.displayAsMoney(ceb.investment * 0.10)}"/>
-                <p:commandLink id="img3" update=":ceForm:page4table"
-                               ajax="true" immediate="true"
-                               actionListener="#{ceb.image(3)}"
-                               onfocus="ceb.hoverImage(3)">
-                    <p:graphicImage name="images/arrowtickS.svg" library="ltam" styleClass="pg5_h1" rendered="#{ceb.isImageSelected(3)}"/>
-                    <p:graphicImage name="images/arrowtick.svg" library="ltam" styleClass="pg5_h1" rendered="#{! ceb.isImageSelected(3)}">
-                    </p:graphicImage>
-                </p:commandLink>
-                <p:outputLabel for="opt3" value="( - 10%)"/>
+                            <p:radioButton id="opt3" for="customRadio" itemIndex="2"/>
+                            <h:outputLabel for="opt3" value="-#{dataDisplayConverter.displayAsMoney(ceb.investment * 0.10)}"/>
+                            <p:commandLink id="img3" update=":ceForm:page4table"
+                                           ajax="true" immediate="true"
+                                           actionListener="#{ceb.image(3)}"
+                                           onfocus="ceb.hoverImage(3)">
+                                <p:graphicImage name="images/arrowtickS.svg" library="ltam" styleClass="pg5_h1" rendered="#{ceb.isImageSelected(3)}"/>
+                                <p:graphicImage name="images/arrowtick.svg" library="ltam" styleClass="pg5_h1" rendered="#{! ceb.isImageSelected(3)}">
+                                </p:graphicImage>
+                            </p:commandLink>
+                            <p:outputLabel for="opt3" value="( - 10%)"/>
 
-                <p:radioButton id="opt4" for="customRadio" itemIndex="3"/>
-                <h:outputLabel for="opt4" value="-#{dataDisplayConverter.displayAsMoney(ceb.investment * 0.15)}"/>
-                <p:commandLink id="img4" update=":ceForm:page4table"
-                               ajax="true" immediate="true"
-                               actionListener="#{ceb.image(4)}"
-                               onfocus="ceb.hoverImage(4)">
-                    <p:graphicImage name="images/arrowtickS.svg" library="ltam" styleClass="pg5_h1" rendered="#{ceb.isImageSelected(4)}"/>
-                    <p:graphicImage name="images/arrowtick.svg" library="ltam" styleClass="pg5_h1" rendered="#{! ceb.isImageSelected(4)}">
-                    </p:graphicImage>
-                </p:commandLink>
-                <p:outputLabel for="opt4" value="( - 15%)"/>
+                            <p:radioButton id="opt4" for="customRadio" itemIndex="3"/>
+                            <h:outputLabel for="opt4" value="-#{dataDisplayConverter.displayAsMoney(ceb.investment * 0.15)}"/>
+                            <p:commandLink id="img4" update=":ceForm:page4table"
+                                           ajax="true" immediate="true"
+                                           actionListener="#{ceb.image(4)}"
+                                           onfocus="ceb.hoverImage(4)">
+                                <p:graphicImage name="images/arrowtickS.svg" library="ltam" styleClass="pg5_h1" rendered="#{ceb.isImageSelected(4)}"/>
+                                <p:graphicImage name="images/arrowtick.svg" library="ltam" styleClass="pg5_h1" rendered="#{! ceb.isImageSelected(4)}">
+                                </p:graphicImage>
+                            </p:commandLink>
+                            <p:outputLabel for="opt4" value="( - 15%)"/>
 
-                <p:radioButton id="opt5" for="customRadio" itemIndex="4"/>
-                <h:outputLabel for="opt5" value="-#{dataDisplayConverter.displayAsMoney(ceb.investment * 0.25)}"/>
-                <p:commandLink id="img5" update=":ceForm:page4table"
-                               ajax="true" immediate="true"
-                               actionListener="#{ceb.image(5)}"
-                               onfocus="ceb.hoverImage(5)">
-                    <p:graphicImage name="images/arrowtickS.svg" library="ltam" styleClass="pg5_h1" rendered="#{ceb.isImageSelected(5)}"/>
-                    <p:graphicImage name="images/arrowtick.svg" library="ltam" styleClass="pg5_h1" rendered="#{! ceb.isImageSelected(5)}">
-                    </p:graphicImage>
-                </p:commandLink>
-                <p:outputLabel for="opt5" value="( - 25%)"/>
-
-
-                <h:outputLabel id="opt6" value="" for="customRadio" itemIndex="5"/>
-                <h:outputLabel value=""/>
-                <p:graphicImage name="images/arrow.svg" library="ltam" styleClass="pg5_h1"/>
-                <p:outputLabel value=""/>
-            </h:panelGrid>
+                            <p:radioButton id="opt5" for="customRadio" itemIndex="4"/>
+                            <h:outputLabel for="opt5" value="-#{dataDisplayConverter.displayAsMoney(ceb.investment * 0.25)}"/>
+                            <p:commandLink id="img5" update=":ceForm:page4table"
+                                           ajax="true" immediate="true"
+                                           actionListener="#{ceb.image(5)}"
+                                           onfocus="ceb.hoverImage(5)">
+                                <p:graphicImage name="images/arrowtickS.svg" library="ltam" styleClass="pg5_h1" rendered="#{ceb.isImageSelected(5)}"/>
+                                <p:graphicImage name="images/arrowtick.svg" library="ltam" styleClass="pg5_h1" rendered="#{! ceb.isImageSelected(5)}">
+                                </p:graphicImage>
+                            </p:commandLink>
+                            <p:outputLabel for="opt5" value="( - 25%)"/>
 
 
-            
-        </p:panel>
-        <div class="tp2"></div>
-        <p:commandButton value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
-                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
-                                      actionListener="#{ceb.prevPage}"/>
-                     <p:commandButton styleClass="Fright" value="Next"  rendered="#{ceb.pagemanager.nextButtonStat}"
-                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
-                                      actionListener="#{ceb.nextPage}"/>
+                            <h:outputLabel id="opt6" value="" for="customRadio" itemIndex="5"/>
+                            <h:outputLabel value=""/>
+                            <p:graphicImage name="images/arrow.svg" library="ltam" styleClass="pg5_h1"/>
+                            <p:outputLabel value=""/>
+                        </h:panelGrid>
+
+
+                    </p:panel>
+
+                    <div class="tp2"></div>
+                    <p:commandButton value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
+                                     update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                     actionListener="#{ceb.prevPage}"/>
+                    <p:commandButton styleClass="Fright" value="Next" rendered="#{ceb.pagemanager.nextButtonStat}"
+                                     update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                     actionListener="#{ceb.nextPage}"/>
+                </div>
+
+        </div>
     </div>
 
 </ui:composition>
