--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page2.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page2.xhtml
@@ -5,26 +5,32 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100 Responsive100 TextAlCenter">
-            <h1>Which of the following best reflects your expectations for this investment?</h1>
+    <div class="Container100">
+            <div class="ContainerIndent">
+                <div class="TextAlCenter">
+                    <h1>Which of the following best reflects your expectations for this investment?</h1>
 
-            <h2>
-                <p:selectOneRadio layout="pageDirection" value="#{ceb.ans2}"
-                        required="true" requiredMessage="Please choose one of these choices">
-                    <f:selectItem itemLabel="Maximize current income." itemValue="1"/>
-                    <f:selectItem itemLabel="Emphasizing income with some potential for growth." itemValue="2"/>
-                    <f:selectItem itemLabel="Emphasizing growth with some potential for income." itemValue="3"/>
-                    <f:selectItem itemLabel="Growth." itemValue="4"/>
-                    <f:selectItem itemLabel="Maximizing growth." itemValue="5"/>
-                </p:selectOneRadio>
-            </h2>
-            <div class="EmptyBox10"></div>
-            <p:commandButton styleClass="prev" value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
-                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
-                                      actionListener="#{ceb.prevPage}"/>
-                     <p:commandButton styleClass="Fright" value="Next"  rendered="#{ceb.pagemanager.nextButtonStat}"
-                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
-                                      actionListener="#{ceb.nextPage}"/>
+                    <h2>
+                        <p:selectOneRadio layout="pageDirection" value="#{ceb.ans2}"
+                                          required="true" requiredMessage="Please choose one of these choices">
+                            <f:selectItem itemLabel="Maximize current income." itemValue="1"/>
+                            <f:selectItem itemLabel="Emphasizing income with some potential for growth." itemValue="2"/>
+                            <f:selectItem itemLabel="Emphasizing growth with some potential for income." itemValue="3"/>
+                            <f:selectItem itemLabel="Growth." itemValue="4"/>
+                            <f:selectItem itemLabel="Maximizing growth." itemValue="5"/>
+                        </p:selectOneRadio>
+                    </h2>
+
+                    <div class="EmptyBox10"></div>
+                    <p:commandButton styleClass="prev" value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
+                                     update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                     actionListener="#{ceb.prevPage}"/>
+                    <p:commandButton styleClass="Fright" value="Next" rendered="#{ceb.pagemanager.nextButtonStat}"
+                                     update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                     actionListener="#{ceb.nextPage}"/>
+                </div>
+            </div>
     </div>
+
 
 </ui:composition>
