--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page6.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page6.xhtml
@@ -5,58 +5,63 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100 TextAlCenter">
-        <h1>
-            Risk tolerance is defined as an investor's ability to accept periodic losses
-            for the potential to realize long-term gains. How would you rate your risk
-            tolerance?
-        </h1>
+    <div class="Container100 ">
+            <div class="ContainerIndent">
+                <div class="TextAlCenter">
+                    <h1>
+                        Risk tolerance is defined as an investor's ability to accept periodic losses
+                        for the potential to realize long-term gains. How would you rate your risk
+                        tolerance?
+                    </h1>
 
-        <div class="EmptyBox50"></div>
-        <div class="Container100 TexAlCenter">
-            <h2>
-                <h:outputText id="displayAns6" value="#{ceb.textAns6}"/>
-            </h2>
-            <h:inputHidden id="ans6" value="#{ceb.ans6}"
-                           required="true" requiredMessage="Please use the slider below to select appropriate risk tolerance"/>
+                    <div class="EmptyBox50"></div>
+                    <div class="Container100 TexAlCenter">
+                        <h2>
+                            <h:outputText id="displayAns6" value="#{ceb.textAns6}"/>
+                        </h2>
+                        <h:inputHidden id="ans6" value="#{ceb.ans6}"
+                                       required="true" requiredMessage="Please use the slider below to select appropriate risk tolerance"/>
+                    </div>
+                    <div class="EmptyBox30"></div>
+                    <table class="Container100 Responsive100" style="border: 0px">
+                        <tr>
+                            <td style="width: 17%; text-align: right; vertical-align: middle; padding-right: 10px">
+                                <h:outputText value="Lowest"/>
+                            </td>
+                            <td style="width: 65%; text-align: center">
+                                <p:slider for="ans6" minValue="1" maxValue="5" step="1">
+                                    <p:ajax event="slideEnd" listener="#{ceb.onSlideEnd}" update="displayAns6"/>
+                                </p:slider>
+                            </td>
+                            <td style="width: 17%; text-align: left; vertical-align: middle; padding-left: 10px">
+                                <h:outputText value="Highest"/>
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <td colspan="3">
+                                <div class="EmptyBox5"></div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="3">
+                                <div class="Fs8 TexAlCenter">
+                                    Please move to the spot on the bar with the most appropriate risk tolerance
+                                </div>
+                            </td>
+                        </tr>
+
+                    </table>
+                    <div class="EmptyBox20"></div>
+                    <p:commandButton value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
+                                     update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                     actionListener="#{ceb.prevPage}"/>
+                    <p:commandButton styleClass="Fright" value="Next" rendered="#{ceb.pagemanager.nextButtonStat}"
+                                     update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                     actionListener="#{ceb.nextPage}"/>
+                </div>
+
         </div>
-        <div class="EmptyBox30"></div>
-        <table class="Container100 Responsive100" style="border: 0px">
-            <tr>
-                <td style="width: 17%; text-align: right; vertical-align: middle; padding-right: 10px">
-                    <h:outputText value="Lowest"/>
-                </td>
-                <td style="width: 65%; text-align: center">
-                    <p:slider for="ans6" minValue="1" maxValue="5" step="1">
-                        <p:ajax event="slideEnd" listener="#{ceb.onSlideEnd}" update="displayAns6" />
-                    </p:slider>
-                </td>
-                <td style="width: 17%; text-align: left; vertical-align: middle; padding-left: 10px">
-                    <h:outputText value="Highest"/>
-                </td>
-
-            </tr>
-	    <tr>
-                <td colspan="3">
-        		<div class="EmptyBox5"></div>
-                </td>
-            </tr>
-	    <tr>
-                <td colspan="3">
-        		<div class="Fs8 TexAlCenter">
-				Please move to the spot on the bar with the most appropriate risk tolerance
-		        </div>
-                </td>
-            </tr>
-
-        </table>
-        <div class="EmptyBox20"></div>
-        <p:commandButton value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
-                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
-                                      actionListener="#{ceb.prevPage}"/>
-                     <p:commandButton styleClass="Fright" value="Next"  rendered="#{ceb.pagemanager.nextButtonStat}"
-                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
-                                      actionListener="#{ceb.nextPage}"/>
     </div>
 
 </ui:composition>
